@@ -1,6 +1,6 @@
 requires 'perl' => '5.010001';
-requires 'Mojolicious' => '7.12';
-requires 'Scalar::Util';
-suggests 'Sereal' => '3.001';
+requires 'Mojolicious' => '7.59';
+suggests 'Mojo::IOLoop::Subprocess::Role::Sereal';
 test_requires 'Test::More' => '0.88';
 test_requires 'Test::Needs';
+author_requires 'Mojo::IOLoop::Subprocess::Role::Sereal';
