@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - INCOMPATIBLE CHANGE: The use_sereal option now requires Mojo::IOLoop::Subprocess::Role::Sereal.
 
 0.004     2017-06-14 16:29:16 EDT
   - Fix syntax oddity occasionally causing use_sereal serialization to fail
